:recycle: refactor: Refactoring project

--- a/src/css/produto.css
+++ b/src/css/produto.css
@@ -1,25 +1,36 @@
 .product {
-  margin-top: 32px;
+  margin-top: 2rem;
   justify-items: start;
   display: grid;
-  gap: 80px;
+  gap: 5rem;
 }
 
 .product__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 48px;
+  gap: 3rem;
+  position: relative;
+}
+
+.product__content .content__favorites-box {
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  width: 3.25rem;
+  top: -3.75rem;
 }
 
 .content__box-img {
-  max-width: 600px;
-  height: 600px;
+  max-width: 37.5rem;
+  height: 37.5rem;
 }
 
 .content__img {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .product__info {
@@ -28,26 +39,26 @@
 }
 
 .product__title {
-  font: var(--fw-bold) 44px/1 "Inter", sans-serif;
-  margin-bottom: 32px;
+  font: var(--fw-bold) 2.75rem/1 "Inter", sans-serif;
+  margin-bottom: 2rem;
 }
 
 .product__desc {
-  font: 300 20px/1.5 "Inter", sans-serif;
-  margin-bottom: 64px;
+  font: 300 1.25rem/1.5 "Inter", sans-serif;
+  margin-bottom: 4rem;
 }
 
 .product__price {
-  font: var(--fw-bold) 36px/1 "Inter", sans-serif;
-  margin-bottom: 80px;
+  font: var(--fw-bold) 2.25rem/1 "Inter", sans-serif;
+  margin-bottom: 5rem;
 }
 
 .product__list {
-  border: 2px solid var(--color-third);
-  border-radius: 4px;
-  padding: 12px;
+  border: 0.125rem solid var(--color-third);
+  border-radius: 0.25rem;
+  padding: 0.75rem;
   display: grid;
-  row-gap: 12px;
+  row-gap: 0.75rem;
   align-self: end;
 }
 
@@ -56,14 +67,14 @@
 }
 
 .product__subtitle {
-  font: var(--fw-bold) 14px/1 "Inter", sans-serif;
+  font: var(--fw-bold) 0.875rem/1 "Inter", sans-serif;
   text-transform: uppercase;
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem;
   color: var(--color-primary);
 }
 
 .product__item:not(.product__item:last-child) {
-  border-bottom: 1px solid var(--color-third);
+  border-bottom: 0.063rem solid var(--color-third);
 }
 
 .product__item {
@@ -76,20 +87,79 @@
 }
 
 .product__description .product__subtitle {
-  font-size: 20px;
+  font-size: 1.25rem;
   max-width: max-content;
-  margin-bottom: 12px;
+  margin-bottom: 0.75;
 }
 
 .product__description .product__subtitle::after {
   content: "";
   display: block;
   width: 100%;
-  height: 2px;
+  height: 0.125rem;
   background: var(--color-third);
-  margin-top: 8px;
+  margin-top: 0.5rem;
 }
 
 .product__description .product__desc {
   color: var(--color-primary);
+}
+
+.spinner {
+  margin: 5rem auto;
+  text-align: center;
+}
+
+.spinner svg {
+  height: 4rem;
+  width: 4rem;
+  fill: var(--color-third);
+  animation: rotate 2s infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 65.313em) {
+  .product__title {
+    font-size: 1.875rem;
+    margin-bottom: 1rem;
+  }
+
+  .product__desc {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 46.875em) {
+  .product__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 48px;
+    position: relative;
+  }
+
+  .product__desc,
+  .product__price {
+    margin-bottom: 2.5rem;
+  }
+
+  .content__box-img {
+    grid-column: span 2;
+    height: 25rem;
+  }
+  .product__info {
+    grid-column: span 2;
+  }
+
+  .product__description .product__desc {
+    margin-bottom: 4rem;
+  }
 }
