--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,7 @@
  */
 
 *:focus-visible {
-  outline: red solid 4px;
+  outline: var(--color-third) solid 4px;
   outline-offset: 4px;
 }
 
@@ -100,56 +100,60 @@ body {
 }
 
 .container {
-  max-width: calc(1230px + 80px);
-  padding: 0 40px;
+  max-width: 81.875rem;
+  padding: 0 2.5rem;
   margin: 0 auto;
 }
 
+/* reusable classes */
+.font-1 {
+  font: var(--fw-bold) 1rem/1 "Inter", sans-serif;
+}
+
+.font-2 {
+  font: var(--fw-bold) 0.875rem/1 "Inter", sans-serif;
+}
+
 .content__search {
-  padding-top: 32px;
-  max-width: 848px;
+  padding: 2rem 2.5rem 0 2.5rem;
+  max-width: 53rem;
   margin: 0 auto;
   display: grid;
-  margin-bottom: 48px;
+  margin-bottom: 3rem;
 }
 
 .content__box-icon {
   grid-area: 1 / 1;
   align-self: center;
-  padding: 24px;
+  padding: 1.5rem;
+  max-width: max-content;
 }
 
 .search {
-  font: var(--fw-bold) 16px/1 "Inter", sans-serif;
   color: var(--color-primary);
   grid-area: 1 / 1;
-  height: 70px;
-  border: 2px solid var(--color-primary);
+  height: 4.375rem;
+  border: 0.125rem solid var(--color-primary);
   background: transparent;
   width: 100%;
-  border-radius: 15px;
-  padding: 22px 256px 22px 80px;
-}
-
-.search::placeholder {
-  font: var(--fw-bold) 16px/1 "Inter", sans-serif;
+  border-radius: 0.938rem;
+  padding: 1.375rem 10rem 1.375rem 5rem;
 }
 
 .button__box {
   grid-area: 1 / 1;
   justify-self: end;
-  padding: 12px 16px 12px 16px;
+  padding: 0.75rem 1rem 0.75rem 1rem;
 }
 
 .btn {
   display: inline-block;
   border: none;
   background: var(--color-secondary);
-  font: var(--fw-bold) 14px/1 "Inter", sans-serif;
   border-radius: 15px;
   color: var(--color-primary);
   text-transform: uppercase;
-  padding: 1rem 24px;
+  padding: 1rem 1.5rem;
   cursor: pointer;
   transition: all 0.3s;
 }
@@ -159,17 +163,15 @@ body {
 }
 
 .content__option-box {
-  margin-bottom: 80px;
+  margin-bottom: 5rem;
 }
 
 .content__option {
-  padding: 12px 24px;
-  font: var(--fw-bold) 14px/1 "Inter", sans-serif;
+  padding: 0.75rem 1.5rem;
   color: var(--color-primary);
 }
 
 .content__option option {
-  font: var(--fw-bold) 14px/1 "Inter", sans-serif;
   color: var(--color-fourth);
   display: grid;
 }
@@ -178,13 +180,13 @@ body {
   color: var(--color-primary);
   display: flex;
   flex-wrap: wrap;
-  column-gap: 32px;
-  row-gap: 100px;
-  padding-bottom: 32px;
+  column-gap: 2rem;
+  row-gap: 6.25rem;
+  padding-bottom: 2rem;
 }
 
 .content__product-box {
-  max-width: 278px;
+  max-width: 17.375rem;
 }
 .content__product-link {
   position: relative;
@@ -195,8 +197,8 @@ body {
   border: none;
   cursor: pointer;
   position: absolute;
-  width: 32px;
-  top: -60px;
+  width: 2rem;
+  top: -3.75rem;
 }
 
 .content__favorites path {
@@ -204,6 +206,7 @@ body {
 }
 
 .content__favorites-active path {
+  stroke: var(--color-primary);
   fill: red;
 }
 
@@ -219,46 +222,33 @@ body {
 .content__icon {
   grid-area: 1 / 1;
   place-self: end;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-right: 0.625rem;
+  margin-bottom: 0.625rem;
 }
 
-/* .content__box-img::after {
-  content: "Promoção";
-  font: var(--fw-bold) 14px/1.17 "Inter";
-  text-transform: uppercase;
-  color: var(--color-fourth);
-  padding: 5px 10px;
-  background-color: var(--color-third);
-  border-radius: 4px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-} */
-
 .content__box-img {
-  max-width: 278px;
-  height: 259px;
+  max-width: 17.375rem;
+  height: 16.188rem;
 }
 
 .content__img {
   width: 100%;
-  height: 259px;
+  height: inherit;
   object-fit: cover;
-  border-radius: 8px 8px 0 40px;
+  border-radius: 0.5rem 0.5rem 0 2.5rem;
 }
 
 .content__tag-promo,
 .content__tag-exc {
-  font: var(--fw-bold) 14px/1.17 "Inter";
+  font: var(--fw-bold) 0.875rem/1.17 "Inter";
   text-transform: uppercase;
   color: var(--color-fourth);
-  padding: 5px 10px;
+  padding: 0.313rem 0.625rem;
   background-color: var(--color-third);
   border-radius: 4px;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0.625rem;
+  right: 0.625rem;
 }
 
 .content__tag-exc {
@@ -267,15 +257,89 @@ body {
 }
 
 .content__title {
-  margin: 12px 0;
-  font: var(--fw-bold) 24px/1 "Inter", sans-serif;
+  margin: 0.75rem 0;
+  font: var(--fw-bold) 1.5rem/1 "Inter", sans-serif;
 }
 
 .content__desc {
-  font: var(--fw-regular) 14px/1.43 "Inter", sans-serif;
-  margin-bottom: 20px;
+  font: var(--fw-regular) 0.875rem/1.43 "Inter", sans-serif;
+  margin-bottom: 1.25rem;
 }
 
 .content__price {
-  font: var(--fw-semibold) 24px/1.25 "Inter", sans-serif;
+  font: var(--fw-semibold) 1.5rem/1.25 "Inter", sans-serif;
+}
+
+.spinner {
+  margin: 5rem auto;
+  text-align: center;
+}
+
+.spinner svg {
+  height: 4rem;
+  width: 4rem;
+  fill: var(--color-third);
+  animation: rotate 2s infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.error {
+  max-width: 40rem;
+  margin: 0 auto;
+  padding: 5rem 4rem;
+  display: flex;
+}
+
+.error svg {
+  height: 3rem;
+  width: 3rem;
+  fill: var(--color-third);
+  transform: translateY(-0.3rem);
+}
+
+.error p {
+  margin-left: 1.5rem;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  font-weight: var(--fw-semibold);
+}
+
+@media (max-width: 550px) {
+  .content__product {
+    justify-content: center;
+  }
+
+  .search {
+    padding: 1.375rem 5rem 1.375rem 2.813rem;
+  }
+
+  .search::placeholder {
+    font-size: 0.625rem;
+  }
+
+  .content__box-icon {
+    padding: 0.75rem;
+  }
+
+  .btn {
+    display: inline-block;
+    border: none;
+    background: var(--color-secondary);
+    font: var(--fw-bold) 8px/1 "Inter", sans-serif;
+    border-radius: 0.938rem;
+    color: var(--color-primary);
+    text-transform: uppercase;
+    padding: 1rem;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
 }
